se crea la clase question para validar los StatusCode